--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | News homepage</title>
@@ -15,43 +15,50 @@
   </style>
 </head>
 <body>
-
-  Home
-  New
-  Popular
-  Trending
-  Categories
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
+<main>
+  <nav>
+    <div class="logo"><img src="assets\images\logo.svg"></div>
+    <div class="menu">
+      <li><a href="/">Home</a></li>
+      <li><a href="/">New</a></li>
+      <li><a href="/">Popular</a></li>
+      <li><a href="/">Trending</a></li>
+      <li><a href="/">Categories</a></li>
+    </div>
+  </nav>
+  <section>
+    <div class="mainImg"><img src="assets\images\image-web-3-desktop.jpg" alt="Web 3 img"></div>
+    <div class="sideTextContainer">
+      <div class="sideText">
+        <h1>New</h1>
+        <div>
+          <h3>Hydrogen VS Electric Cars</h3>
+          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+        </div>
+        <div class="bar"></div>
+        <div>
+          <h3>The Downsides of AI Artistry</h3>
+          <p>What are the possible adverse effects of on-demand AI image generation?</p>
+        </div>
+        <div class="bar"></div>
+        <div>
+          <h3>Is VC Funding Drying Up?</h3>
+          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+        </div>
+      </div>
+    </div>
+    <div class="articleTitle">
+      <h1>The Bright Future of Web 3.0?</h1>
+    </div>
+    <div class="articleText">
+      <p> We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+          But is it really fulfilling its promise?
+      </p>
+      <button>READ MORE</button>
+    </div>
+  </section>
+  <footer></footer>
+</main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
