--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -57,11 +57,36 @@
       <button>READ MORE</button>
     </div>
   </section>
-  <footer></footer>
+  <footer>
+    <div class="footerContainer">
+      <div class="footerImg"><img src="assets\images\image-retro-pcs.jpg" alt=""></div>
+      <div class="footerText">
+        <h1>01</h1>
+        <h3>Reviving Retro PCs</h3>
+        <p>What happens when old PCs <br> are given modern upgrades?</p>
+      </div>
+    </div>
+    <div class="footerContainer">
+      <div class="footerImg"><img src="assets\images\image-top-laptops.jpg" alt="" srcset=""></div>
+      <div class="footerText">
+        <h1>02</h1>
+        <h3>Top 10 Laptops of 2022</h3>
+        <p>Our best picks for various <br> needs and budgets.</p>
+      </div>
+    </div>
+    <div class="footerContainer" id="footer3">
+      <div class="footerImg"><img src="assets\images\image-gaming-growth.jpg" alt="" srcset=""></div>
+      <div class="footerText">
+        <h1>03</h1>
+        <h3>The Growth of Gaming</h3>
+        <p>How the pandemic has sparked <br>fresh opportunities.</p>
+      </div>
+    </div>
+  </footer>
 </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Pumix530</a>.
   </div>
 </body>
 </html>
