--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -10,41 +10,52 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: baseline; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
 <main>
-  <nav>
-    <div class="logo"><img src="assets\images\logo.svg"></div>
-    <div class="menu">
-      <li><a href="/">Home</a></li>
-      <li><a href="/">New</a></li>
-      <li><a href="/">Popular</a></li>
-      <li><a href="/">Trending</a></li>
-      <li><a href="/">Categories</a></li>
-    </div>
-  </nav>
+  <header>
+
+    <div class="toggle-btn" onclick="myFunction()"><img src="assets\images\icon-menu.svg" alt=""></div>
+
+    <div class="logo"><img src="assets\images\logo.svg" ></div>
+    <nav id="nav">
+      <ul class="menu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/">New</a></li>
+        <li><a href="/">Popular</a></li>
+        <li><a href="/">Trending</a></li>
+        <li><a href="/">Categories</a></li>
+      </ul>
+    </nav>
+  </header>
   <section>
-    <div class="mainImg"><img src="assets\images\image-web-3-desktop.jpg" alt="Web 3 img"></div>
+    <div class="mainImg"><img id="mainImg" src="assets\images\image-web-3-desktop.jpg 1200w" srcset="assets\images\image-web-3-mobile.jpg 900w, assets\images\image-web-3-desktop.jpg 1200w" alt="Web 3 img"></div>
     <div class="sideTextContainer">
       <div class="sideText">
         <h1>New</h1>
-        <div>
-          <h3>Hydrogen VS Electric Cars</h3>
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
-        </div>
+          <a href="/">
+            <div id="side1">
+              <h3 id="sideh1">Hydrogen VS Electric Cars</h3>
+              <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+            </div>
+          </a>
         <div class="bar"></div>
-        <div>
-          <h3>The Downsides of AI Artistry</h3>
-          <p>What are the possible adverse effects of on-demand AI image generation?</p>
-        </div>
+          <a href="/">
+            <div id="side2">
+              <h3 id="sideh2">The Downsides of AI Artistry</h3>
+              <p>What are the possible adverse effects of on-demand AI image generation?</p>
+            </div>
+          </a>
         <div class="bar"></div>
-        <div>
-          <h3>Is VC Funding Drying Up?</h3>
-          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-        </div>
+          <a href="/">
+            <div id="side3">
+              <h3 id="sideh3">Is VC Funding Drying Up?</h3>
+              <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+            </div>
+          </a>
       </div>
     </div>
     <div class="articleTitle">
@@ -54,39 +65,47 @@
       <p> We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
           But is it really fulfilling its promise?
       </p>
-      <button>READ MORE</button>
+      <a href="/"><button>READ MORE</button></a>
     </div>
   </section>
   <footer>
-    <div class="footerContainer">
-      <div class="footerImg"><img src="assets\images\image-retro-pcs.jpg" alt=""></div>
-      <div class="footerText">
-        <h1>01</h1>
-        <h3>Reviving Retro PCs</h3>
-        <p>What happens when old PCs <br> are given modern upgrades?</p>
+    <a href="/">
+      <div class="footerContainer" id="footerText1">
+        <div class="footerImg"><img src="assets\images\image-retro-pcs.jpg" alt=""></div>
+        <div class="footerText">
+          <h1>01</h1>
+          <h3 id="footerTitle1">Reviving Retro PCs</h3>
+          <p>What happens when old PCs <br> are given modern upgrades?</p>
       </div>
     </div>
-    <div class="footerContainer">
-      <div class="footerImg"><img src="assets\images\image-top-laptops.jpg" alt="" srcset=""></div>
-      <div class="footerText">
-        <h1>02</h1>
-        <h3>Top 10 Laptops of 2022</h3>
-        <p>Our best picks for various <br> needs and budgets.</p>
+    </a>
+    <a href="/">
+      <div class="footerContainer"  id="footerText2">
+        <div class="footerImg" id="laptopimg"><img src="assets\images\image-top-laptops.jpg" alt="" srcset=""></div>
+        <div class="footerText">
+          <h1>02</h1>
+          <h3 id="footerTitle2">Top 10 Laptops of 2022</h3>
+          <p>Our best picks for various <br> needs and budgets.</p>
+        </div>
       </div>
-    </div>
-    <div class="footerContainer" id="footer3">
-      <div class="footerImg"><img src="assets\images\image-gaming-growth.jpg" alt="" srcset=""></div>
-      <div class="footerText">
-        <h1>03</h1>
-        <h3>The Growth of Gaming</h3>
-        <p>How the pandemic has sparked <br>fresh opportunities.</p>
+
+    <a href="/">
+      <div class="footerContainer" id="footer3">
+        <div class="footerImg" id="padImg"><img src="assets\images\image-gaming-growth.jpg" alt="" srcset=""></div>
+         <div class="footerText">
+          <h1>03</h1>
+          <h3 id="footerTitle3">The Growth of Gaming</h3>
+          <p>How the pandemic has sparked <br>fresh opportunities.</p>
+        </div>
       </div>
-    </div>
+    </a>
   </footer>
 </main>
-  <div class="attribution">
+ <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Pumix530</a>.
-  </div>
+    Coded by <a href="https://github.com/Pumix530/FrontendMentor/tree/main/news-homepage-main">Pumix530</a>.
+  </div> -->
+
+  <script src="app.js"></script>
 </body>
 </html>
