--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -16,16 +16,29 @@
 </head>
 <body>
 <main>
-
+ 
+  <div class="toggle-nav" id="navbar">
+    <div class="blurDiv"></div>
+    <div class="navDiv">
+     <div class="closeBtn" id="closeBtn" style="cursor: pointer;"><img src="assets\images\icon-menu-close.svg" alt="" srcset=""></div>
+      <ul class="toggleMenu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/">New</a></li>
+        <li><a href="/">Popular</a></li>
+        <li><a href="/">Trending</a></li>
+        <li><a href="/">Categories</a></li>
+      </ul>
+    </div>
+  </div>
   
 
 
   <header>
 
-    <div class="toggle-btn" onclick="myFunction()"><img src="assets\images\icon-menu.svg" alt=""></div>
+    <div class="toggle-btn" id="toggle" style="cursor: pointer";><img src="assets\images\icon-menu.svg" alt=""></div>
 
     <div class="logo"><img src="assets\images\logo.svg" ></div>
-    <nav id="nav">
+    <nav>
       <ul class="menu">
         <li><a href="/">Home</a></li>
         <li><a href="/">New</a></li>
@@ -104,12 +117,15 @@
       </div>
     </a>
   </footer>
+
 </main>
  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Pumix530/FrontendMentor/tree/main/news-homepage-main">Pumix530</a>.
   </div> -->
 
-  <script src="app.js"></script>
+  <script src="app.js">
+
+  </script>
 </body>
 </html>
