--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -10,13 +10,13 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: baseline; }
+    .attribution { font-size: 11px; text-align: baseline; justify-self: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+
   </style>
 </head>
 <body>
 <main>
- 
   <div class="toggle-nav" id="navbar">
     <div class="blurDiv"></div>
     <div class="navDiv">
@@ -30,8 +30,6 @@
       </ul>
     </div>
   </div>
-  
-
 
   <header>
 
@@ -119,10 +117,10 @@
   </footer>
 
 </main>
- <!-- <div class="attribution">
+ <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Pumix530/FrontendMentor/tree/main/news-homepage-main">Pumix530</a>.
-  </div> -->
+  </div>
 
   <script src="app.js">
 
